--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", "1", (session[:ratings].include? rating or session[:ratings].empty?)
+    = check_box_tag "ratings[#{rating}]", "1", (@ratings.include? rating or @ratings.empty?)
   = submit_tag 'Refresh', :id => "ratings_submit"
   
 %table#movies
