--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", "1", (@ratings.keys.empty? or @ratings.keys.include? rating)
+    = check_box_tag "ratings[#{rating}]", "1", (@ratings.empty? or @ratings.include? rating)
   = submit_tag 'Refresh', :id => "ratings_submit"
   
 %table#movies
